fix(sidebar): Button not showing

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -668,37 +668,10 @@ use the correct border radius == */
   .sounds-modal-content {
     max-width: 90%;
   }
-
   .settings-content {
     width: 100% !important;
     height: 100% !important;
   }
-
-  ul.tabs li {
-    font-size: 12px !important;
-  }
-  ul.tabs li,
-  ul.tabs li.current {
-    background: transparent !important;
-    width: 40px;
-    padding: 10px 20px 1px 5px !important;
-    font-size: 0px !important;
-  }
-  .mobile-warning {
-    visibility: visible;
-  }
-  ul.tabs li i:hover {
-    background: var(--sat-search-shortcuts);
-    color: var(--sat-accent-color1);
-    transition: var(--transition-speed-default);
-    box-shadow: 0px 12px 23px -16px var(--drop-shadow-color);
-  }
-  ul.tabs li i {
-    padding: 20px 20px !important;
-    font-size: 20px !important;
-    border-radius: 10px;
-  }
-
   .tab-content {
     width: 86%;
     margin-left: 45px !important;
@@ -739,6 +712,10 @@ use the correct border radius == */
   }
   .settings-nav-separator {
     visibility: hidden;
+  }
+  /* Settings button */
+  .sidebar-trigger {
+    display: block;
   }
 }
 
